@@ -63,7 +63,7 @@ dependencies {
 
     implementation(project(":http-api"))
     implementation(project(":runelite-jshell"))
-    implementation(group = "ch.qos.logback", name = "logback-classic", version = "1.2.13")
+    implementation(group = "ch.qos.logback", name = "logback-classic", version = "1.5.18")
     implementation(group = "com.google.code.gson", name = "gson", version = "2.8.5")
     implementation(group = "com.google.guava", name = "guava", version = "30.1.1-jre") {
         exclude(group = "com.google.code.findbugs", module = "jsr305")
@@ -217,6 +217,7 @@ tasks {
         classpath = project.sourceSets.main.get().runtimeClasspath
         enableAssertions = true
         mainClass.set("net.unethicalite.client.Unethicalite")
+        jvmArgs("--add-opens=java.base/java.lang.reflect=ALL-UNNAMED")
     }
 
     withType<JavaCompile> {
@@ -229,7 +230,7 @@ tasks {
         ruleSets = emptyList()
         ignoreFailures = true
         isConsoleOutput = true
-        enabled = true
+        enabled = false
     }
 
     test {
